<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_menu_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="66dp"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_menu" />

    <ImageView
        android:id="@+id/iv_account_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="26dp"
        android:contentDescription="@string/account"
        android:src="@drawable/account" />

    <TextView
        android:id="@+id/tv_parent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="122dp"
        android:text="@string/rent_a_car"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="198dp"
        android:background="@drawable/raunder_search"
        android:drawableStart="@drawable/search"
        android:drawablePadding="10dp"
        android:padding="16dp"
        android:paddingHorizontal="12dp"
        android:text="@string/search_raunder_text"
        android:textColor="@color/gray"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_blue_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="340dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/iv_arrow_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arroww"
            android:paddingHorizontal="14dp"
            android:paddingTop="30dp"
            android:src="@drawable/arroww" />

        <TextView
            android:id="@+id/tv_bogamy_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingTop="58dp"
            android:text="@string/bogamy"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pink_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/pinck"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/iv_arrow_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arroww2"
            android:paddingHorizontal="14dp"
            android:paddingTop="30dp"
            android:src="@drawable/arroww" />

        <TextView
            android:id="@+id/tv_bogamy_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingTop="58dp"
            android:text="@string/bogamy"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cv_blue_card"
        android:layout_alignParentEnd="true"
        android:src="@drawable/group1" />

    <ImageView
        android:id="@+id/iv_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cv_pink_card"
        android:layout_alignBottom="@+id/cv_pink_card"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/car"
        android:elevation="2dp"
        android:src="@drawable/group2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_light_blue2_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="660dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/blue2"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/bogamy3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingTop="58dp"
            android:text="@string/bogamy"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/arrow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arroww2"
            android:paddingHorizontal="14dp"
            android:paddingTop="30dp"
            android:src="@drawable/arroww" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cv_light_blue2_card"
        android:layout_alignBottom="@+id/cv_light_blue2_card"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/car"
        android:elevation="2dp"
        android:src="@drawable/group3" />

</RelativeLayout>

